<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".GameStarted">

    <TextView
        android:id="@+id/judul_started"
        android:layout_width="293dp"
        android:layout_height="67dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="59dp"
        android:background="@drawable/border_orange"
        android:fontFamily="@font/poppins_medium"
        android:padding="10dp"
        android:text="@string/pada_menu_ini_kamu_akan_menebak_nama_hewan"
        android:textAlignment="center"
        android:textColor="#263238"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/apakah_kamu_siap"
        android:textAlignment="center"
        android:textColor="#263238"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_start"
        android:layout_width="208dp"
        android:layout_height="53dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/mulai"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hands" />
</android.support.constraint.ConstraintLayout>